	- fixed PNG comparison - images were in the wrong order
	- added support for slots
	- create "output_folder"
	
0.73
	- fixed potential memory leak in strip_sampleof_pinmame() detected by cppcheck
	- fixed various cppcheck warnings
	- fixed wrong variable being used in non-WIN32 code of wait_for_thread()
	- added missing pthread.h include for non-WIN32 code in common.c
	- fixed valgrind logfile location
	- do not use valgrind for executions without a driver_entry
	- added missing -lpthread in makefile
	- added -Wno-unused-variable to build without warnings with clang
	- corrected default valgrind parameters in source
	- added detection of duplicated bios entries
	- added message when no matching software entry could be found in the -listsoftwarelist output
	- renamed valgrind logfile to just valgrind.log
	- enabled DTD validation when reading -listsoftware output
	- added filter check to only try to run compatible -listsoftware entries
	- added detection of duplicated ramsize entries
	- do not remove the valgrind output with "store_output" set to 2 (again)
	- added filter_unprintable() to common.c/.h
	- filter unprintable characters before writing to XML
	- added mrt_array and append_to_array() to common.c/.h
	- added "noreturn" attribute to cleanup_and_exit() and removed unnecessary hack to silence compiler from main()
	- added missing static to some global variables
	- added option "no_execution" to perform testruns without executing the binaries
	- added device_slot to image_entry and set it in read_softlist_entry()
	- added missing xmlCleanupParser() call in cleanup_and_exit()
	- updated WARNINGS in makefile and added clang-specific ones
	- removed unnecessary global variable listxml_output
	
	create_report
	- pass the file descriptor as parameter to PRINT_INFO
	- improved layout of comparison report
	- removed option "ignore_exitcode_4" and always filter the mandatory device messages
	- filter unprintable characters from input XMLs